# softblue

./: CMakeLists.txt  LICENSE  README.md
resources/shaders/: default.frag  default.vert  texture.frag  texture.vert
shaders/: cubemap.frag  cubemap.vert  default.frag  default.vert  dynamic.frag  dynamic.vert
src/: camera.cpp  camera.h  cubemap.cpp  cubemap.h  cubemesh.cpp  cubemesh.h  debug.h  dynamiccubemap.cpp  dynamiccubemap.h  fbo.cpp  fbo.h  mainwindow.cpp  mainwindow.h  mesh.cpp  mesh.h  meshgen.cpp  meshgen.h  physics.cpp  physics.h  raycast.cpp  raycast.h  realtime.cpp  realtime.h  scene.cpp  scene.h  shader.cpp  shader.h  spheremesh.cpp  spheremesh.h  tetmesh.cpp  tetmesh.h
src/utils/: errorthrowing.h  sceneparser.cpp
